--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "jest --config jest.config.js --coverage --verbose --updateSnapshot"
     },
     "dependencies": {
         "react": "^18.2.0",
@@ -15,17 +16,32 @@
         "react-query": "^3.39.3"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.5",
+        "@babel/plugin-transform-runtime": "^7.24.3",
+        "@babel/preset-env": "^7.24.5",
+        "@babel/preset-react": "^7.24.1",
         "@testing-library/jest-dom": "^6.4.5",
         "@testing-library/react": "^15.0.7",
+        "@types/jest": "^29.5.12",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.8.0",
         "@typescript-eslint/parser": "^7.8.0",
         "@vitejs/plugin-react": "^4.2.1",
+        "babel-jest": "^29.7.0",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
         "eslint": "^8.57.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
+        "jest-fetch-mock": "^3.0.3",
+        "ts-jest": "^29.1.2",
         "typescript": "^5.2.2",
         "vite": "^5.2.0"
+    },
+    "jest": {
+        "configFile": "jest.config.js"
     }
 }
